# hackathon-agent-monorepo

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  start_local.sh
.devcontainer/: devcontainer.json
backend/: .env.example  Dockerfile  README.md  audit_pipeline.py  load_dataset.py  load_dataset_simple.py  pyproject.toml  regenerate_fichas.py  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: conversation_memory.py  state.py  supervisor.py
backend/app/agents/micro_agents/: ficha_injector.py  guardrail_slm.py  profiler_slm.py  summarizer_slm.py
backend/app/agents/teams/research/: agents.py  graph.py  state.py  vision_agent.py
backend/app/agents/teams/tool_ops/: agents.py  graph.py  mcp_client.py  tools.json
backend/app/analytics/: __init__.py  engine.py
backend/app/api/: admin.py  routes.py  users.py  ws.py
backend/app/api/admin/: __init__.py  evals.py  metrics.py
backend/app/core/: auth.py  checkpointer.py  config.py  database.py  llm.py  rate_limit.py
backend/app/evals/: framework.py  test_set.py
backend/app/mcp/: adapter.py  client.py
backend/app/observability/: __init__.py  audit_log.py  cost_tracker.py  feature_flags.py  tracer.py
backend/app/rag/: re_ranker.py  retrieval.py  vector_store.py
backend/app/skills/: code_executor.py
backend/evals/: __init__.py  prompts.py  run.py
backend/mcp_servers/: __init__.py  gateway.py  hey_credito.py  hey_cuentas.py  hey_inversion.py  hey_pro_shop.py  hey_soporte.py  hey_transferencias.py  hey_verificacion.py
backend/scripts/: generate_initial_profiles.py
backend/scripts/agents/offline/: 01_train_conductual.py  02_train_transaccional.py  03_train_salud_financiera.py  04_build_fichas_redis.py  _common.py  run_all_offline.sh
backend/tests/: conftest.py  test_agents.py  test_api.py  test_contract_chat_stream.py  test_contract_mcp_gateway.py  test_rag.py  test_security.py
(+63 files in other folders)
