[project]
name = "hackathon-agent-backend"
version = "0.1.0"
description = "Production-ready async AI agent backend with LangGraph and MCP"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "redis>=5.0.0",
  "redisvl>=0.3.5",
  "sse-starlette>=2.1.2",
  "pydantic-settings>=2.4.0",
  "langgraph-checkpoint-redis>=0.0.6",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true
